--- a/Canvas/003CanvasPath.html
+++ b/Canvas/003CanvasPath.html
@@ -2,24 +2,37 @@
 <html>
 <head>
 	<title>Canvas</title>
-	<script src="Modernizr-2.0.6.js" type="text/javascript"></script>
+	<script src="Modernizr-2.0.6.js"></script>
 	<script>
 		function draw() {
 			//проверка поддержки элемента canvas в браузере.
 			if (!Modernizr.canvas) return;
 
-			//получение элемента и его графического контекста.
 			var canvas = document.getElementById("canvas");
 			var context = canvas.getContext("2d");
 
-			//создание пути.
-			context.beginPath();
-			context.moveTo(100,100);
-			context.lineTo(200,200);
+			context.save();
+			context.translate(100,100);
 
-			//черчение линии на холсте
+			//начало пути.
+			context.beginPath();
+			context.moveTo(0,0);
+			context.lineTo(100,0);
+			context.lineTo(100,100);
+			context.lineTo(0,100);
+
+			//прорисовка линии от точки (0,100) к началу пути.
+			
+			
+			context.closePath();
+
+			//прорисовка контура полученного пути.
 			context.stroke();
+
+			context.restore();
+            
 		}
+
 		if (window.addEventListener)
 			window.addEventListener("load", draw, true);
 
@@ -29,6 +42,7 @@
 	<canvas id="canvas" height="300" width="300" style="border: solid 1px black;">
 		Ваш браузер не поддерживает элемент <b>Cavas</b>
 	</canvas>
+
 
 </body>
 </html>
