--- a/Canvas/004_CanvasLineStyle.html
+++ b/Canvas/004_CanvasLineStyle.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Canvas</title>
-	<script src="Modernizr-2.0.6.js" type="text/javascript"></script>
+	<script src="Modernizr-2.0.6.js"></script>
 	<script>
 		function draw() {
 			//проверка поддержки элемента canvas в браузере.
@@ -12,14 +12,28 @@
 			var canvas = document.getElementById("canvas");
 			var context = canvas.getContext("2d");
 
-			//создание пути.
-			context.beginPath();
-			context.moveTo(100,100);
-			context.lineTo(200,200);
+			context.save();
+			context.translate(100,100);
 
-			//черчение линии на холсте
+			//начало пути.
+			context.beginPath();
+			context.moveTo(0,0);
+			context.lineTo(100,0);
+			context.lineTo(100,100);
+			context.lineTo(0,100);
+			context.closePath();
+
+			//настойка стилей линии.
+			context.lineWidth = 8;
+			context.strokeStyle = "green";
+			context.lineJoin = "bevel";
 			context.stroke();
+
+			//востанавливаем прежнее состояние контекста.
+			context.restore();
+
 		}
+
 		if (window.addEventListener)
 			window.addEventListener("load", draw, true);
 
@@ -29,6 +43,6 @@
 	<canvas id="canvas" height="300" width="300" style="border: solid 1px black;">
 		Ваш браузер не поддерживает элемент <b>Cavas</b>
 	</canvas>
-
-</body>
+</body>	
 </html>
+
