--- a/Canvas/005_CanvasFillStyle.html
+++ b/Canvas/005_CanvasFillStyle.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Canvas</title>
-	<script src="Modernizr-2.0.6.js" type="text/javascript"></script>
-	<script>
+	<script src="Modernizr-2.0.6.js"></script>
+	<script type="text/javascript">
 		function draw() {
 			//проверка поддержки элемента canvas в браузере.
 			if (!Modernizr.canvas) return;
@@ -12,14 +12,32 @@
 			var canvas = document.getElementById("canvas");
 			var context = canvas.getContext("2d");
 
-			//создание пути.
-			context.beginPath();
-			context.moveTo(100,100);
-			context.lineTo(200,200);
+			context.save();
+			context.translate(100,100);
 
-			//черчение линии на холсте
+			//начало пути.
+			context.beginPath();
+			context.moveTo(0,0);
+			context.lineTo(100,0);
+			context.lineTo(100,100);
+			context.lineTo(0,100);
+			context.closePath();
+
+			//настройка стиля заливки
+			context.fillStyle = "blue";
+			context.fill();
+
+			//настойка стилей линии.
+			context.lineWidth = 8;
+			context.strokeStyle = "rgba(100,100,100,1)";
+			context.lineJoin = "round";
 			context.stroke();
+
+			//востанавливаем прежнее состояние контекста.
+			context.restore();
+
 		}
+
 		if (window.addEventListener)
 			window.addEventListener("load", draw, true);
 
@@ -29,6 +47,6 @@
 	<canvas id="canvas" height="300" width="300" style="border: solid 1px black;">
 		Ваш браузер не поддерживает элемент <b>Cavas</b>
 	</canvas>
-
-</body>
+</body>	
 </html>
+
