--- a/Canvas/006_CanvasFillRect.html
+++ b/Canvas/006_CanvasFillRect.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Canvas</title>
+	<title>fillRect()</title>
 	<script src="Modernizr-2.0.6.js" type="text/javascript"></script>
-	<script>
+
+	<script type="text/javascript">
 		function draw() {
 			//проверка поддержки элемента canvas в браузере.
 			if (!Modernizr.canvas) return;
@@ -12,13 +13,17 @@
 			var canvas = document.getElementById("canvas");
 			var context = canvas.getContext("2d");
 
-			//создание пути.
-			context.beginPath();
-			context.moveTo(100,100);
-			context.lineTo(200,200);
+			//заполнение прямоугольной области синим цветом.
+			context.fillStyle = "blue";
+			context.fillRect(100,100,50,50)
+			//вычерчивание красной границы толщиной 10 пикселей
+			context.strokeStyle = "red";
+			context.lineWidth = 10;
+			context.strokeRect(100,100,50,50);
 
-			//черчение линии на холсте
-			context.stroke();
+			//очистка прямоугольной области от контента.
+			context.clearRect(125,125,35,35);
+
 		}
 		if (window.addEventListener)
 			window.addEventListener("load", draw, true);
