--- a/Canvas/009_CanvasLoadImage.html
+++ b/Canvas/009_CanvasLoadImage.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Canvas</title>
-	<script src="Modernizr-2.0.6.js" type="text/javascript"></script>
+	<title>drawImage</title>
+	<script src="Modernizr-2.0.6.js"></script>
 	<script>
 		function draw() {
-			//проверка поддержки элемента canvas в браузере.
+		
 			if (!Modernizr.canvas) return;
 
-			//получение элемента и его графического контекста.
+			
 			var canvas = document.getElementById("canvas");
 			var context = canvas.getContext("2d");
 
-			//создание пути.
-			context.beginPath();
-			context.moveTo(100,100);
-			context.lineTo(200,200);
+		   var logo = new Image();
 
-			//черчение линии на холсте
-			context.stroke();
+		   logo.onload = function () {
+		   	context.drawImage(logo,22,22);
+		   };
+		   logo.src = "logo.png";
 		}
 		if (window.addEventListener)
 			window.addEventListener("load", draw, true);
