--- a/Canvas/010_CanvasCreatePattern.html
+++ b/Canvas/010_CanvasCreatePattern.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Canvas</title>
-	<script src="Modernizr-2.0.6.js" type="text/javascript"></script>
+	<title>drawImage()</title>
+	<script src="Modernizr-2.0.6.js"></script>
 	<script>
 		function draw() {
-			//проверка поддержки элемента canvas в браузере.
+		
 			if (!Modernizr.canvas) return;
 
-			//получение элемента и его графического контекста.
+			
 			var canvas = document.getElementById("canvas");
 			var context = canvas.getContext("2d");
 
-			//создание пути.
-			context.beginPath();
-			context.moveTo(100,100);
-			context.lineTo(200,200);
+			var pattern = new Image();
+			pattern.src = "tile.jpg";
 
-			//черчение линии на холсте
-			context.stroke();
+			pattern.onload = function () {
+				context.fillStyle = context.createPattern(pattern,'repeat');
+				context.fillRect(0,0,300,300);
+			}
+
+
 		}
 		if (window.addEventListener)
 			window.addEventListener("load", draw, true);
