--- a/Canvas/014_CanvasTranslate.html
+++ b/Canvas/014_CanvasTranslate.html
@@ -18,7 +18,7 @@
 				var x = $("X").value;
 				var y = $("Y").value;
 
-				//сохранение состояния полотна и началч системы координат.
+				//сохранение состояния полотна и начала системы координат.
 				context.save();
 				//трансформация перемешенияю
 				context.translate(x,y);
